# language-flashcard-app-gpt4

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  config.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  nginx.api.config  nginx.config  pyproject.toml  ricotta.env.example
api/: pyproject.toml
api/src/ricotta/: config.py  main.py
api/src/ricotta/core/: logger.py
api/src/ricotta/models/: card.py  query.py  user.py
api/src/ricotta/routers/: card.py  user.py
api/src/ricotta/services/: chat_extractor.py  database.py
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/public/: voice-synthesis.js
client/src/: main.tsx
client/src/components/: CreateMeDialog.tsx  LanguageDropdownInput.tsx  Logo.tsx  SettingsMenu.tsx  SoundButton.tsx  StudyToggle.tsx
client/src/components/ContentCard/: ContentCardBack.tsx  ContentCardFront.tsx  index.tsx
client/src/data/: language-codes.json
client/src/queries/: index.ts
scripts/: convert-sqlite-to-csv.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
