[tool.poetry]
name = "Language learning app"
version = "0.0.1"
packages = []
description = "Language learning app"
authors = ["Amber Williams <https://github.com/Amber-Williams>"]

[[tool.poetry.source]]
name = 'test-pypi'
url = 'https://test.pypi.org/simple/'
priority = 'explicit'

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.0"
langchain = "0.0.312"
openai = "0.28.1"
werkzeug = "3.0.0"
python-dotenv = "1.0.0"
sentry-sdk = { extras = ["flask"], version = "^1.20.0" }
flask-sqlalchemy = "3.0.5"
sqlalchemy = { extras = ["mypy"], version = "2.0.20" }
PyJWT = { extras = ["crypto"], version = "2.6.0" }
coloredlogs = "15.0.1"
jsonschema = "4.17.3"
logging = "^0.4.9.6"
flask-cors = "^4.0.0"

[tool.poetry.dev-dependencies]
types-toml = "0.10.8.7"
types-requests = "2.31.0.2"

[tool.poetry.group.dev.dependencies]
types-pytz = "^2023.3.1.1"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
